--- a/_includes/post-title.html
+++ b/_includes/post-title.html
@@ -8,15 +8,15 @@
 
 <!-- 版本二 可切换页面 -->
 {% if page.color.size==0 or page.color==nil %}
-<div class="post-top" style="background-color:#9A85FF;">
+<div class="post-top" style="background-color:#ffcdcd;">
   <!-- 页面宽度大于800px -->
   <div class="left-area">
     {% if page.next.url %}
-      <a href="{{ page.next.url }}" class="btn bounceInLeft animated" onmouseover="showLeft();this.style.color='#9A85FF';" onmouseout="goneLeft();this.style.color='rgba(0,0,0,.2)';"><</a>
-      <div id="left-tab" style="display:none;"><span class="left-san"></span><span class="left-main" style="color:#9A85FF;"><sapn class="main">{{ page.next.title }}</sapn></span></div>
+      <a href="{{ page.next.url }}" class="btn bounceInLeft animated" onmouseover="showLeft();this.style.color='#ffcdcd';" onmouseout="goneLeft();this.style.color='rgba(0,0,0,.2)';"><</a>
+      <div id="left-tab" style="display:none;"><span class="left-san"></span><span class="left-main" style="color:#ffcdcd;"><sapn class="main">{{ page.next.title }}</sapn></span></div>
     {% else %}
       <a href="javascript:;" class="btn bounceInLeft animated" onmouseover="showLeft();this.style.color='#9A85FF';" onmouseout="goneLeft();this.style.color='rgba(0,0,0,.2)';"><</a>
-      <div id="left-tab" style="display:none;"><span class="left-san"></span><span class="left-main" style="color:#9A85FF;"><sapn class="main">没有上一页咯</sapn></span></div>
+      <div id="left-tab" style="display:none;"><span class="left-san"></span><span class="left-main" style="color:#ffcdcd;"><sapn class="main">没有上一页咯</sapn></span></div>
     {% endif %}
   </div>
   <div class="post-titlearea">
