--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -26,6 +26,9 @@
 
 {% endif %}
 
+{% if page.comments != false %}
+	    {% include disqus_comments.html %}
+{% endif %} 
 
 {% if site.Gitment %}
 <section class="post-footer-item comment">
