--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,8 +17,8 @@
 <!-- <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Pacifico|Ubuntu|Roboto+Mono|Source+Sans+Pro" rel="stylesheet"> -->
 
 <!-- Favicon -->
-<link href="{{site.baseurl}}/assets/favicon/profile.jpeg" rel="shortcut icon" />
-<link href="{{site.baseurl}}/assets/favicon/profile.jpeg" rel="apple-touch-icon-precomposed" />
+<link href="{{site.baseurl}}/assets/favicon/favicon-32x32.png" rel="shortcut icon" />
+<link href="{{site.baseurl}}/assets/favicon/apple-icon-120x120.png" rel="apple-touch-icon-precomposed" />
 <!-- Android Lolipop Theme Color -->
 <!-- <meta name="theme-color" content="#1464FB"> -->
 <title>{{ page.title }}</title>
