--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,21 +17,21 @@
 <!-- <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Pacifico|Ubuntu|Roboto+Mono|Source+Sans+Pro" rel="stylesheet"> -->
 
 <!-- Favicon -->
-<!--<link href="{{site.baseurl}}/assets/profile.jpeg" rel="shortcut icon" />
+<!--<link href="{{site.baseurl}}/assets/favicon/profile.jpeg" rel="shortcut icon" />
 <link href="{{site.baseurl}}/assets/profile.jpeg" rel="apple-touch-icon-precomposed" />-->
-<link rel="apple-touch-icon-precomposed" sizes="57x57" href="/apple-icon-57x57.png">
-<link rel="apple-touch-icon-precomposed" sizes="60x60" href="/apple-icon-60x60.png">
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/apple-icon-72x72.png">
-<link rel="apple-touch-icon-precomposed" sizes="76x76" href="/apple-icon-76x76.png">
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/apple-icon-114x114.png">
-<link rel="apple-touch-icon-precomposed" sizes="120x120" href="/apple-icon-120x120.png">
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/apple-icon-144x144.png">
-<link rel="apple-touch-icon-precomposed" sizes="152x152" href="/apple-icon-152x152.png">
-<link rel="apple-touch-icon-precomposed" sizes="180x180" href="/apple-icon-180x180.png">
-<link rel="shortcut icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-<link rel="shortcut icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="shortcut icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-<link rel="shortcut icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="apple-touch-icon-precomposed" sizes="57x57" href="{{site.baseurl}}/assets/favicon//apple-icon-57x57.png">
+<link rel="apple-touch-icon-precomposed" sizes="60x60" href="{{site.baseurl}}/assets/favicon//apple-icon-60x60.png">
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{site.baseurl}}/assets/favicon//apple-icon-72x72.png">
+<link rel="apple-touch-icon-precomposed" sizes="76x76" href="{{site.baseurl}}/assets/favicon//apple-icon-76x76.png">
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{site.baseurl}}/assets/favicon//apple-icon-114x114.png">
+<link rel="apple-touch-icon-precomposed" sizes="120x120" href="{{site.baseurl}}/assets/favicon//apple-icon-120x120.png">
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{site.baseurl}}/assets/favicon//apple-icon-144x144.png">
+<link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{site.baseurl}}/assets/favicon//apple-icon-152x152.png">
+<link rel="apple-touch-icon-precomposed" sizes="180x180" href="{{site.baseurl}}/assets/favicon//apple-icon-180x180.png">
+<link rel="shortcut icon" type="image/png" sizes="192x192"  href="{{site.baseurl}}/assets/favicon//android-icon-192x192.png">
+<link rel="shortcut icon" type="image/png" sizes="32x32" href="{{site.baseurl}}/assets/favicon//favicon-32x32.png">
+<link rel="shortcut icon" type="image/png" sizes="96x96" href="{{site.baseurl}}/assets/favicon//favicon-96x96.png">
+<link rel="shortcut icon" type="image/png" sizes="16x16" href="{{site.baseurl}}/assets/favicon//favicon-16x16.png">
 <link rel="manifest" href="/manifest.json">
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
