--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -756,7 +756,7 @@ a{
     right: 0;
     margin: 0 auto;
     font-weight: normal;
-    color: white;
+    color: #634b4b;
     /*font-family: 'Ubuntu', sans-serif;*/
     font-family: "Arial","Microsoft YaHei","黑体","宋体",sans-serif;
     top: 350px;
