--- a/_includes/post-title.html
+++ b/_includes/post-title.html
@@ -8,7 +8,7 @@
 
 <!-- 版本二 可切换页面 -->
 {% if page.color.size==0 or page.color==nil %}
-<div class="post-top" style="background-color:#ffcdcd;">
+<div class="post-top" style="background-color:#ffffff;">
   <!-- 页面宽度大于800px -->
   <div class="left-area">
     {% if page.next.url %}
