--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -710,7 +710,7 @@ a{
     margin: 0 auto;
     font-size: 45px;
     font-weight: 550;
-    color: white;
+    color: #656565;
     font-family: "Arial","Microsoft YaHei","黑体","宋体",sans-serif;
     /*font-family: 'Kaushan Script', cursive;*/
 }
