--- a/_includes/post-header.html
+++ b/_includes/post-header.html
@@ -1,5 +1,5 @@
 {% if page.color.size==0 or page.color==nil %}
-<header id="post-header" style="background-color:#ffcdcd;">
+<header id="post-header" style="background-color:#9e4f4f;">
   <div class="top-center">
       <div class="logo">
           <a href="{{ "/" | relative_url }}" title="my awesome webtitle" style="color: white;">{{ site.webtitle }}</a>
