--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ a{
 #index-header{
     width: 100%;
     height: 75px;
-    background-color: white;
+    background-color: #9e4f4f;
     border-bottom: 1px solid #e7eaf1;
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
@@ -38,7 +38,7 @@ a{
     margin-left: 30px;
 }
 .logo a{
-  color: #444;
+  color: #fff;
   /*display: block;*/
   /*font-family: 'Kaushan Script', cursive;*/
   font-family: Pacifico;
@@ -58,7 +58,7 @@ a{
     line-height: 75px;
 }
 .top-nav li a{
-  color: #444;
+  color: #fff;
   /*display: block;*/
 }
 .top-nav li a:hover{
