--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header id="index-header">
   <div class="top-center">
       <div class="logo">
-          <a href="{{ "/" | relative_url }}" title="my awesome webtitle"><image class="fit_logo" src="/assets/logo.png">{{ site.webtitle }}</a>
+          <a href="{{ "/" | relative_url }}" title="my awesome webtitle"><image src="/assets/logo.png" style="width: 85px;"></a>
       </div>
       <nav class="top-nav">
           <ul>
