--- a/_includes/post-header.html
+++ b/_includes/post-header.html
@@ -2,7 +2,7 @@
 <header id="post-header" style="background-color:#9e4f4f;">
   <div class="top-center">
       <div class="logo">
-          <a href="{{ "/" | relative_url }}" title="my awesome webtitle" style="color: white;">{{ site.webtitle }}</a>
+          <a href="{{ "/" | relative_url }}" title="my awesome webtitle" style="color: white;"><image src="/assets/logo.png" style="width: 85px;"></a>
       </div>
       <nav class="top-nav">
           <ul>
