--- a/_includes/post-header.html
+++ b/_includes/post-header.html
@@ -22,7 +22,7 @@
 <header id="post-header" style="background-color:{{ page.color }};">
   <div class="top-center">
       <div class="logo">
-          <a href="{{ "/" | relative_url }}" title="my awesome webtitle" style="color: white;"><image src="/assets/logo.png" style="width: 80px;"></a>
+          <a href="{{ "/" | relative_url }}" title="my awesome webtitle" ><image src="/assets/logo.png" style="width: 80px;"></a>
       </div>
       <nav class="top-nav">
           <ul>
