--- a/_includes/post-title.html
+++ b/_includes/post-title.html
@@ -28,10 +28,10 @@
   <div class="right-area">
     {% if page.previous.url %}
       <a href="{{ page.previous.url }}" class="btn bounceInRight self-animated" onmouseover="showRight();this.style.color='#9A85FF';" onmouseout="goneRight();this.style.color='rgba(0,0,0,.2)';">></a>
-      <div id="right-tab" style="display:none;"><span class="right-san"></span><span class="right-main" style="color:#9A85FF;"><sapn class="main">{{ page.previous.title }}</sapn></span></div>
+      <div id="right-tab" style="display:none;"><span class="right-san"></span><span class="right-main" style="color:#9e4f4f;"><sapn class="main">{{ page.previous.title }}</sapn></span></div>
     {% else %}
-      <a href="javascript:;" class="btn bounceInRight self-animated" onmouseover="showRight();this.style.color='#9A85FF';" onmouseout="goneRight();this.style.color='rgba(0,0,0,.2)';">></a>
-      <div id="right-tab" style="display:none;"><span class="right-san"></span><span class="right-main" style="color:#9A85FF;"><sapn class="main">없음</sapn></span></div>
+      <a href="javascript:;" class="btn bounceInRight self-animated" onmouseover="showRight();this.style.color='#9e4f4f';" onmouseout="goneRight();this.style.color='rgba(0,0,0,.2)';">></a>
+      <div id="right-tab" style="display:none;"><span class="right-san"></span><span class="right-main" style="color:#9e4f4f;"><sapn class="main">없음</sapn></span></div>
     {% endif %}
   </div>
 
