--- a/_includes/post-title.html
+++ b/_includes/post-title.html
@@ -12,11 +12,11 @@
   <!-- 页面宽度大于800px -->
   <div class="left-area">
     {% if page.next.url %}
-      <a href="{{ page.next.url }}" class="btn bounceInLeft animated" onmouseover="showLeft();this.style.color='#ffcdcd';" onmouseout="goneLeft();this.style.color='rgba(0,0,0,.2)';"><</a>
-      <div id="left-tab" style="display:none;"><span class="left-san"></span><span class="left-main" style="color:#ffcdcd;"><sapn class="main">{{ page.next.title }}</sapn></span></div>
+      <a href="{{ page.next.url }}" class="btn bounceInLeft animated" onmouseover="showLeft();this.style.color='#9e4f4f';" onmouseout="goneLeft();this.style.color='rgba(0,0,0,.2)';"><</a>
+      <div id="left-tab" style="display:none;"><span class="left-san"></span><span class="left-main" style="color:#9e4f4f;"><sapn class="main">{{ page.next.title }}</sapn></span></div>
     {% else %}
-      <a href="javascript:;" class="btn bounceInLeft animated" onmouseover="showLeft();this.style.color='#9A85FF';" onmouseout="goneLeft();this.style.color='rgba(0,0,0,.2)';"><</a>
-      <div id="left-tab" style="display:none;"><span class="left-san"></span><span class="left-main" style="color:#ffcdcd;"><sapn class="main">없음</sapn></span></div>
+      <a href="javascript:;" class="btn bounceInLeft animated" onmouseover="showLeft();this.style.color='#9e4f4f';" onmouseout="goneLeft();this.style.color='rgba(0,0,0,.2)';"><</a>
+      <div id="left-tab" style="display:none;"><span class="left-san"></span><span class="left-main" style="color:#9e4f4f;"><sapn class="main">없음</sapn></span></div>
     {% endif %}
   </div>
   <div class="post-titlearea">
