--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ a{
     z-index: 1;
 }
 .top-center{
-    max-width: 1024px;
+/*     max-width: 1024px; */
     height: 100%;
     margin: 0 auto;
 }
